# feedreader

./: .gitignore  Backend.hs  Feed.hs  GtkFeedStore  Main.hs  UI.hs  feedreader.cabal
src/: Backend.hs  DataBackend.hs  Feed.hs  FilterModel.hs  GTKFeedStore.hs  Keymap.hs  Main.hs  UI.hs  WidgetBuilder.hs
src/Backend/: Acid.hs
